--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@
 </head>
 <body>
     <canvas id="canvas3d"></canvas>
-    <script type="module">
-        import { Application } from 'https://cdn.jsdelivr.net/npm/@splinetool/runtime@0.9.0/dist/runtime.js';
-
-        const canvas = document.getElementById('canvas3d');
-        const app = new Application(canvas);
-        app.load('scene.splinecode'); // Ensure this file is in the same directory
-    </script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
